--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
-    "gatsby": "^2.23.12",
+    "gatsby": "^1.9.279",
+    "js-graph-algorithms": "^1.0.18",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
