--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "test": "ava",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "ava": "^3.15.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.3.2"
   },
