--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby": "^2.32.2",
     "js-graph-algorithms": "^1.0.18",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "ava": "^3.15.0",
